15.2.7 (ws)
      - fix: could not removed edited slur
      - enable bracket editing with keyboard
      - fix crash when inserting new instruments
      - renamed embedded emmentaler-20 font to mscore-20 to avoid conflicts
        with installed emmentaler fonts
14.2.7 (ws)
      - in textpalette set focus back to mscore after clicking attribute
        buttons
      - add underline text attribute
13.2.7 (ws)
      - added small buildin soundfont to get mscore working "out of the box"
      - added patched version of fluidsynth; removing FLUID dependency
11.2.7 (ws)
      - implement editing in "Mag"combobox
      - removed default application font setting
      ======== Version 0.4 released (Revision 167) =============
10.2.7 (ws)
      - added some more documentation
10.2.7 (lv)
      * MusicXML updates
      - fixed export of dynamic sffz
      - fixed import of other-dynamics
      - fixed import of TempoText
      - updated dynamics default y position
9.2.7 (ws)
      - added build-in demo file, shown on first start
      - added splash screen
      - implement ctrl+mouse wheel to zoom in/out
8.2.7 (ws)
      - shift+mouse wheel now scrolls horizontally
      - implement status bar; display mode in status bar
      - implemented edit mode of accidentals and note heads to allow
        for manual position adjustment
      - some debug abort()'s are only active in debug mode
      - fix crash when a pulldown menu is active (Style) and the
        mouse release happens on the canvas
      - fix insert repeat barline, undo/redo
7.2.7 (ws)
      - implement mouse click to move in text while in text edit mode
      - tune position of measure number in style.cpp
      - fix printing of dynamics and tuplets number
6.2.7 (ws)
      - implement Clef handling similar to KeySig
      - implement KeySig delete
      - fix: removal of unecessary KeySigs after insertion of new
        KeySig incl. undo/redo
      (lv)
      * MusicXML updates